<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView

        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textStyle="bold"
        android:text="@string/contact_name_label" />

    <EditText
        android:id="@+id/contact_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/contact_name_hint" />

    <TextView

        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textStyle="bold"
        android:text="@string/contact_number_label" />

    <EditText
        android:id="@+id/contact_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="phone"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:hint="@string/contact_number_hint" />

    <TextView

        android:textSize="18sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:textStyle="bold"
        android:text="@string/contact_email_label" />

    <EditText
        android:id="@+id/contact_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:inputType="textEmailAddress"
        android:hint="@string/contact_email_hint" />

    <Button
        android:id="@+id/choose_contact_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/choose_contact"
        android:textSize="21sp"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        android:textStyle="bold" />


</LinearLayout>

